--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,12 @@
     <string name="network_error">连接网络出错</string>
     <string name="loading">加载中</string>
     <string name="json_erro">数据错误</string>
+
+
+    <string name="login">登录</string>
+    <string name="input_mobile">请输入注册的手机号</string>
+    <string name="login">登录</string>
+    <string name="code">请输入验证码</string>
+
+
 </resources>
