--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,10 +10,9 @@
     <string name="json_erro">数据错误</string>
 
 
-    <string name="login">登录</string>
+    <string name="login_in">登录</string>
     <string name="input_mobile">请输入注册的手机号</string>
-    <string name="login">登录</string>
     <string name="code">请输入验证码</string>
-
-
+    <string name="send_code">发送验证码</string>
+    <string name="sutmit">提交</string>
 </resources>
