信息录入  添加员工

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="code">请输入验证码</string>
     <string name="send_code">发送验证码</string>
     <string name="sutmit">提交</string>
+    <string name="confirm_add">确认添加</string>
 </resources>
