--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="entering">信息录入</string>
     
     <string-array name="select_dialog_items">
-        <item>拍照上传</item>
-        <item>本地上传</item>
+        <item>从相册选择</item>
+        <item>拍照</item>
     </string-array>
 </resources>
