日期控件封装

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="input_pwd">请输入密码</string>
     <string name="input_name">请输入姓名</string>
     <string name="input_bri">请选择生日</string>
+    <string name="input_addr">请选择地址</string>
 
     <string name="code">请输入验证码</string>
     <string name="send_code">发送验证码</string>
