--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,15 +14,19 @@
     <string name="login_in">登录</string>
     <string name="input_mobile">请输入注册的手机号</string>
     <string name="input_pwd">请输入密码</string>
+    <string name="input_old_pwd">请输入原密码</string>
+    <string name="input_new_pwd">请输入新密码</string>
     <string name="input_name">请输入姓名</string>
     <string name="input_bri">请选择生日</string>
-    <string name="input_addr">请选择地址</string>
+    <string name="input_addr">请选择地区</string>
 
     <string name="code">请输入验证码</string>
     <string name="send_code">发送验证码</string>
     <string name="submit">提交</string>
     <string name="confirm_add">确认添加</string>
     <string name="confirm">确认</string>
+    <string name="next">下一步</string>
+    <string name="area">地区</string>
 
     <string name="me">我的</string>
     <string name="entering">信息录入</string>
